Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1467

recent fuzz-itest regression in 0.9 branch

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • 0.9.0
    • 0.9.0
    • tablet
    • None

    Description

      This test is now ~5% flaky where it used to be pretty stable. The flakes seem to be data correctness issues. It seems to have regressed when UPSERT was added, so I'll bisect to verify and look into it.

      Attachments

        Activity

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: